Parameters - add dispatch (updateData) to API call if !fetching. This sorts the card after initial render and watching list is update, this is specific to sort by myShows. Without this call, sort would perform one step behind with an empty state.data. (no sorting) Calendar/CalendarComponent - just changed the css styles and fixed the slidesToDisplayCalendar(), param 'slides' accepts list, not length.
checkSeason - no change, just stylistic changes in code.
slidesToDisplay, no change, just commented code.

--- a/public/components/calendar/CalendarComponent/calendarComponent.css
+++ b/public/components/calendar/CalendarComponent/calendarComponent.css
@@ -10,8 +10,13 @@
 
 /* Styles to overwrite coverImage and Countdown styles. */
 .calendar-items-container {
-  border: yellowgreen 2px solid;
-  background: wheat;
+  border: #a3cfff 2px solid;
+  background: #eaecff;
+  padding: 1em 0;
+}
+.calendar-items-container > .swiper-container {
+  /* border: yellowgreen 2px solid; */
+  background: aliceblue;
   padding: 1em 0;
 }
 .calendar-items-container > .swiper-container > .swiper-pagination {
